# CDC-scripts

./: CMakeLists.txt  README.md  package.xml
include/: ekf.h
launch/: fourEKFs.launch
scripts/: laserMeasurement.py  mavros2roscopter.py  serial2ros.py  time_compare.py
src/: .rosrc  ekf.cpp  mavrosROV.launch  nav2geo.py  serial2ros.py
src/autonomy/: autonomy.py
src/pathplanning/: gui.py  lawnmower.py
src/poscontrol/: positioncontrol.py
